foi colocado falha de esilo e um fundo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>calculadora</title>
+    <link rel="stylesheet" href="pagina_de_estilo.css">
 </head>
 <body>
     <div class="fundo">
@@ -35,11 +36,11 @@
                 <td><button>1</button></td>
                 <td><button>2</button></td>
                 <td><button>3</button></td>
-                <td><button>=</button></td>
+                <td rowspan="2"><button>=</button></td>
             </tr>
             <tr>
                 <td colspan="2"><button>0</button></td>
-                <td rowspan="2"><button>.</button></td>
+                <td><button>.</button></td>
             </tr>
         </table>
     </div>
