--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>calculadora</title>
     <link rel="stylesheet" href="pagina_de_estilo.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <div class="fundo">
@@ -13,38 +14,39 @@
     </div>
     <div class="calculadora">
         <h1 >calculadora</h1>
-        <p id="resultado"></p>
+            <p id="resultado"></p>                                           
         <table >
             <tr>
-                <td><button class="botao">C</button></td>
-                <td><button class="botao"><</button></td>
-                <td><button class="botao">/</button></td>
-                <td><button class="botao">*</button></td>
+                <td><button class="botao" onclick=limpar()>C</button></td>
+                <td><button class="botao" onclick="voltar()"><</button></td>
+                <td><button class="botao" onclick="inserir('/')">/</button></td>
+                <td><button class="botao" onclick="inserir('*')">*</button></td>
             </tr>
             <tr>
-                <td><button class="botao">7</button></td>
-                <td><button class="botao">8</button></td>
-                <td><button class="botao">9</button></td>
-                <td><button class="botao">-</button></td>
+                <td><button class="botao" onclick="inserir('7')">7</button></td>
+                <td><button class="botao" onclick="inserir('8')">8</button></td>
+                <td><button class="botao" onclick="inserir('9')">9</button></td>
+                <td><button class="botao" onclick="inserir('-')">-</button></td>
             </tr>
             <tr>
-                <td><button class="botao">4</button></td>
-                <td><button class="botao">5</button></td>
-                <td><button class="botao">6</button></td>
-                <td><button class="botao">+</button></td>
+                <td><button class="botao" onclick="inserir('4')">4</button></td>
+                <td><button class="botao" onclick="inserir('5')">5</button></td>
+                <td><button class="botao" onclick="inserir('6')">6</button></td>
+                <td><button class="botao" onclick="inserir('+')">+</button></td>
             </tr>
             <tr>
-                <td><button class="botao">1</button></td>
-                <td><button class="botao">2</button></td>
-                <td><button class="botao">3</button></td>
-                <td rowspan="2"><button class="botao" style="height: 101px;">=</button></td>
+                <td><button class="botao" onclick="inserir('1')">1</button></td>
+                <td><button class="botao" onclick="inserir('2')">2</button></td>
+                <td><button class="botao" onclick="inserir('3')">3</button></td>
+                <td rowspan="2"><button class="botao" style="height: 101px; "onclick="calcular()">=</button></td>
             </tr>
             <tr>
-                <td colspan="2"><button class="botao" style="width: 102px;">0</button></td>
-                <td><button class="botao">.</button></td>
+                <td colspan="2"><button class="botao" onclick="inserir('0')"style="width: 102px;">0</button></td>
+                <td><button class="botao" onclick="inserir('.')">.</button></td>
             </tr>
         </table>
     </div>
-    
+<script>
+</script>
 </body>
 </html>
