--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
                 <td><button class="botao" onclick="inserir('1')">1</button></td>
                 <td><button class="botao" onclick="inserir('2')">2</button></td>
                 <td><button class="botao" onclick="inserir('3')">3</button></td>
-                <td rowspan="2"><button class="botao" style="height: 101px; "onclick="calcular()">=</button></td>
+                <td><button class="botao" onclick="inserir('%')">%</button></td>
             </tr>
             <tr>
                 <td colspan="2"><button class="botao" onclick="inserir('0')"style="width: 102px;">0</button></td>
                 <td><button class="botao" onclick="inserir('.')">.</button></td>
+                <td><button class="botao" onclick="calcular()">=</button></td>
             </tr>
         </table>
     </div>
